<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2Logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/definitivocirculo"
        android:transitionName="logoImageTrans"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="28dp"
        android:text="Bienvenido a RecarYa!"
        android:textSize="34sp"
        android:textStyle="bold"
        android:transitionName="textTrans" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:text="Inicia sesion para continuar"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextUser"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="9"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="9"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="7"
        android:background="@drawable/btn_style"
        android:onClick="ingresar"
        android:text="@string/ingresar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/abel"
        android:gravity="center"
        android:onClick="irRegistrar"
        android:text="@string/registrar"
        android:textSize="14dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:srcCompat="@drawable/instagram"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:srcCompat="@drawable/facebook"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:srcCompat="@drawable/search"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</LinearLayout>